--- a/styles/stylesmarea.css
+++ b/styles/stylesmarea.css
@@ -4,7 +4,60 @@
 
 /* --------------------------- MAIN COLOR: #CBF3F3 -------------------------- */
 
-.bg-main-color{
-    background-color: #CBF3F3 ;
+.bg-main-color {
+  background-color: #cbf3f3;
 }
 
+/* ------------------------------ SECTION LOGIN ----------------------------- */
+
+.login {
+  position: relative;
+}
+.login img {
+  filter: grayscale(55%);
+  z-index: -1;
+  top: 1px;
+  width: 100%;
+  position: absolute;
+}
+.page-content-login {
+  transition: transform 300ms ease;
+  height: 100%;
+}
+
+.box-login {
+  border-radius: 60px !important;
+  margin: 0;
+  top: 10%;
+  width: 100%;
+  height: 100%;
+}
+
+.bienvenida {
+  position: relative;
+  padding-top: 70px;
+  padding-left: 20px;
+  width: 100%;
+}
+
+.bienvenida h2 {
+  color: whitesmoke;
+  font-size: 35px;
+}
+
+.bienvenida p {
+  margin-left: 5px;
+  font-size: 18px;
+  padding-top: 20px;
+}
+
+.buttom-login {
+  color: black;
+  background-color: #cbf3f3;
+}
+
+.content-login-input {
+  padding: 30px;
+}
+
+/* ---------------------------- END SECTION LOGIN --------------------------- */
