--- a/views/error.html
+++ b/views/error.html
@@ -117,7 +117,7 @@
 
 <script type="text/javascript" src="../scripts/jquery.js"></script>
 <script type="text/javascript" src="../scripts/plugins.js"></script>
-<script type="text/javascript" src="../scripts/custom.js"></script>
+<!-- <script type="text/javascript" src="../scripts/custom.js"></script> -->
 <script type="text/javascript" src="../js/validator.js"></script>
 <!-- <script type="text/javascript" src="scripts/pwa.js"></script> -->
 <!-- <script type="text/javascript" src="js/app.js"></script> -->
